// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a default button 1`] = `
.c0 {
  background: red;
  color: white;
  padding: 0.5rem 0.75rem;
  font-weight: bold;
  cursor: pointer;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`renders a primary button 1`] = `
.c0 {
  background: red;
  color: white;
  padding: 0.5rem 0.75rem;
  font-weight: bold;
  cursor: pointer;
}

.c1 {
  background: blue;
}

<div>
  <button
    class="c0 c1"
  >
    Label
  </button>
</div>
`;
